--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -241,32 +241,42 @@
           <NumberAxis fx:id="numberAxis" side="LEFT" />
         </yAxis>
       </BarChart>
-      <VBox layoutX="1036.0" layoutY="479.0" prefHeight="56.0" prefWidth="212.0">
+      <VBox layoutX="1046.0" layoutY="484.0" prefHeight="84.0" prefWidth="202.0">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="226.0">
+            <VBox prefHeight="56.0" prefWidth="207.0">
                <children>
-                  <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="80.0" text="Occurrence %" />
-                  <Pane prefHeight="25.0" prefWidth="0.0" />
-                  <ChoiceBox fx:id="choiceBoxOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="57.0" />
-                  <Pane prefHeight="34.0" prefWidth="3.0" />
-                  <TextField fx:id="textFieldOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="48.0" promptText="0-100" />
-                  <Pane prefHeight="34.0" prefWidth="3.0" />
-                  <Label text="\%" />
+                  <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="202.0">
+                     <children>
+                        <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="80.0" text="Occurrence %" />
+                        <Pane prefHeight="25.0" prefWidth="0.0" />
+                        <ChoiceBox fx:id="choiceBoxOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="57.0" />
+                        <Pane prefHeight="34.0" prefWidth="3.0" />
+                        <TextField fx:id="textFieldOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="48.0" promptText="0-100" />
+                        <Pane prefHeight="34.0" prefWidth="3.0" />
+                        <Label text="\%" />
+                     </children>
+                  </HBox>
+                  <Pane prefHeight="6.0" prefWidth="317.0" />
+                  <HBox prefHeight="25.0" prefWidth="231.0">
+                     <children>
+                        <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="25.0" prefWidth="32.0" text="Select" />
+                        <Pane prefHeight="34.0" prefWidth="3.0" />
+                        <TextField fx:id="textFieldNumofOccurrences" prefHeight="25.0" prefWidth="92.0" promptText="# occurrences" />
+                        <Pane prefHeight="25.0" prefWidth="2.0" />
+                        <ChoiceBox fx:id="choiceBoxOccurrences" prefHeight="25.0" prefWidth="70.0" />
+                        <Pane prefHeight="25.0" prefWidth="2.0" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
-            <Pane prefHeight="6.0" prefWidth="317.0" />
-            <HBox prefHeight="25.0" prefWidth="231.0">
+            </VBox>
+            <Pane prefHeight="12.0" prefWidth="202.0" />
+            <HBox>
                <children>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="25.0" prefWidth="32.0" text="Select" />
-                  <Pane prefHeight="34.0" prefWidth="3.0" />
-                  <TextField fx:id="textFieldNumofOccurrences" prefHeight="25.0" prefWidth="92.0" promptText="# occurrences" />
-                  <Pane prefHeight="25.0" prefWidth="2.0" />
-                  <ChoiceBox fx:id="choiceBoxOccurrences" prefHeight="25.0" prefWidth="70.0" />
-                  <Pane prefHeight="25.0" prefWidth="2.0" />
+                  <Pane prefHeight="25.0" prefWidth="120.0" />
+                  <Button fx:id="btnRefresh" disable="true" mnemonicParsing="false" onAction="#refreshGraph" prefHeight="25.0" prefWidth="80.0" text="refresh" />
                </children>
             </HBox>
          </children>
       </VBox>
-      <Button fx:id="btnRefresh" disable="true" layoutX="1181.0" layoutY="543.0" mnemonicParsing="false" onAction="#refreshGraph" prefHeight="25.0" prefWidth="67.0" text="refresh" />
    </children>
 </AnchorPane>
