--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -26,9 +26,9 @@
    <children>
       <VBox layoutX="19.0" layoutY="17.0" prefHeight="451.0" prefWidth="628.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="619.0" AnchorPane.topAnchor="15.0">
          <children>
-            <VBox prefHeight="199.0" prefWidth="618.0">
+            <VBox prefHeight="149.0" prefWidth="628.0">
                <children>
-                  <Label prefHeight="34.0" prefWidth="451.0" text="Potential Incident Traces" textFill="#aa14c4">
+                  <Label prefHeight="50.0" prefWidth="451.0" text="Potential Incident Traces" textFill="#aa14c4">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -80,7 +80,7 @@
                               </HBox>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="33.0" prefWidth="680.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="7.0" prefWidth="628.0">
                            <children>
                               <ImageView fx:id="imgSystemFileCheck" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" visible="false">
                                  <image>
@@ -88,14 +88,14 @@
                                  </image>
                               </ImageView>
                               <Pane prefHeight="20.0" prefWidth="6.0" />
-                              <Label fx:id="lblSystemFileCheck" prefHeight="33.0" prefWidth="267.0">
+                              <Label fx:id="lblSystemFileCheck" prefHeight="16.0" prefWidth="267.0">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="609.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="628.0">
                            <children>
                               <ImageView fx:id="imgNumOfActions" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" visible="false">
                                  <image>
@@ -103,14 +103,14 @@
                                  </image>
                               </ImageView>
                               <Pane prefHeight="20.0" prefWidth="6.0" />
-                              <Label fx:id="lblNumOfActions" prefHeight="33.0" prefWidth="267.0">
+                              <Label fx:id="lblNumOfActions" prefHeight="2.0" prefWidth="267.0">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="609.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="628.0">
                            <children>
                               <ImageView fx:id="imgNumOfStates" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" visible="false">
                                  <image>
@@ -118,7 +118,7 @@
                                  </image>
                               </ImageView>
                               <Pane prefHeight="20.0" prefWidth="6.0" />
-                              <Label fx:id="lblNumOfStates" prefHeight="33.0" prefWidth="267.0">
+                              <Label fx:id="lblNumOfStates" prefHeight="0.0" prefWidth="267.0">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -236,7 +236,7 @@
             </VBox>
          </children>
       </VBox>
-      <BarChart fx:id="barChartActions" layoutX="696.0" layoutY="31.0" prefHeight="398.0" prefWidth="564.0">
+      <BarChart fx:id="barChartActions" layoutX="698.0" layoutY="14.0" prefHeight="398.0" prefWidth="564.0">
         <xAxis>
           <CategoryAxis fx:id="categoryAxis" side="BOTTOM" />
         </xAxis>
@@ -244,42 +244,40 @@
           <NumberAxis fx:id="numberAxis" side="LEFT" />
         </yAxis>
       </BarChart>
-      <VBox layoutX="1046.0" layoutY="484.0" prefHeight="84.0" prefWidth="202.0">
+      <HBox layoutX="1023.0" layoutY="483.0">
          <children>
-            <VBox prefHeight="56.0" prefWidth="207.0">
+            <VBox prefHeight="25.0" prefWidth="125.0">
                <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="202.0">
+                  <Label alignment="TOP_LEFT" contentDisplay="CENTER" prefHeight="17.0" prefWidth="116.0" text="Ranked Occurrences">
+                     <tooltip>
+                        <Tooltip text="Find all actions that have top occurrences" />
+                     </tooltip>
+                  </Label>
+                  <HBox prefHeight="25.0" prefWidth="139.0">
                      <children>
-                        <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="80.0" text="Occurrence %" />
-                        <Pane prefHeight="25.0" prefWidth="0.0" />
-                        <ChoiceBox fx:id="choiceBoxOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="57.0" />
-                        <Pane prefHeight="34.0" prefWidth="3.0" />
-                        <TextField fx:id="textFieldOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="48.0" promptText="0-100" />
-                        <Pane prefHeight="34.0" prefWidth="3.0" />
-                        <Label text="\%" />
-                     </children>
-                  </HBox>
-                  <Pane prefHeight="6.0" prefWidth="317.0" />
-                  <HBox prefHeight="25.0" prefWidth="231.0">
-                     <children>
-                        <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="25.0" prefWidth="32.0" text="Select" />
-                        <Pane prefHeight="34.0" prefWidth="3.0" />
-                        <TextField fx:id="textFieldNumofOccurrences" prefHeight="25.0" prefWidth="92.0" promptText="# occurrences" />
-                        <Pane prefHeight="25.0" prefWidth="2.0" />
                         <ChoiceBox fx:id="choiceBoxOccurrences" prefHeight="25.0" prefWidth="70.0" />
-                        <Pane prefHeight="25.0" prefWidth="2.0" />
+                        <TextField fx:id="textFieldNumofOccurrences" prefHeight="25.0" prefWidth="42.0" promptText="#" />
                      </children>
                   </HBox>
                </children>
             </VBox>
-            <Pane prefHeight="12.0" prefWidth="202.0" />
-            <HBox>
+            <VBox alignment="CENTER" prefHeight="37.0" prefWidth="86.0">
                <children>
-                  <Pane prefHeight="25.0" prefWidth="120.0" />
-                  <Button fx:id="btnRefresh" disable="true" mnemonicParsing="false" onAction="#refreshGraph" prefHeight="25.0" prefWidth="80.0" text="refresh" />
+                  <Label contentDisplay="CENTER" prefHeight="11.0" prefWidth="80.0" text="Occurrence %">
+                     <tooltip>
+                        <Tooltip text="Find all actions that have specific occurrence percentage" />
+                     </tooltip>
+                  </Label>
+                  <HBox>
+                     <children>
+                        <ChoiceBox fx:id="choiceBoxOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="40.0" />
+                        <TextField fx:id="textFieldOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="46.0" promptText="0-100" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
+            </VBox>
          </children>
-      </VBox>
+      </HBox>
+      <Button fx:id="btnRefresh" disable="true" layoutX="1154.0" layoutY="543.0" mnemonicParsing="false" onAction="#refreshGraph" prefHeight="25.0" prefWidth="80.0" text="refresh" />
    </children>
 </AnchorPane>
