--- a/src/fxml/task_cell.fxml
+++ b/src/fxml/task_cell.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -29,10 +30,14 @@
             </SplitPane>
          </children>
       </VBox>
-      <HBox fx:id="hboxOptions" alignment="CENTER_RIGHT" layoutX="566.0" layoutY="8.0" prefHeight="30.0" prefWidth="152.0" spacing="5.0" visible="false" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="8.0">
+      <HBox fx:id="hboxOptions" alignment="CENTER_RIGHT" layoutX="566.0" layoutY="8.0" prefHeight="30.0" prefWidth="86.0" spacing="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="8.0">
          <children>
-            <Button fx:id="btnSaveTrace" mnemonicParsing="false" onAction="#saveTrace" prefWidth="80.0" text="save trace" />
-            <Button fx:id="btnShowEntities" mnemonicParsing="false" onAction="#showEntities" prefWidth="80.0" text="Details" />
+            <MenuButton fx:id="menuButtonOptions" alignment="TOP_LEFT" mnemonicParsing="false" text="Options">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </MenuButton>
             <Label />
          </children>
       </HBox>
