--- a/src/fxml/ShowTraceInSystem.fxml
+++ b/src/fxml/ShowTraceInSystem.fxml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
 
-<StackPane fx:id="mainStackPane" prefHeight="550.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.instantiation.analysis.TraceViewerInSystemController" />
+<VBox spacing="5.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.instantiation.analysis.TraceViewerInSystemController">
+   <children>
+      <HBox style="-fx-background-color: white;">
+         <children>
+            <Button mnemonicParsing="false" onAction="#loadTransitionSystem" text="Load transition System" />
+            <ProgressIndicator fx:id="progressIndicator" prefHeight="6.0" prefWidth="41.0" visible="false" />
+            <Button mnemonicParsing="false" onAction="#showPreviousStates" text="show previous states" />
+         </children>
+      </HBox>
+      <StackPane fx:id="mainStackPane" prefHeight="550.0" prefWidth="950.0" style="-fx-background-color: white;" />
+   </children>
+   <padding>
+      <Insets left="5.0" top="5.0" />
+   </padding>
+</VBox>
